# hr-solution

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  DEV_TOOLS.md  Dockerfile  LICENSE  RUFF_FIXES.md  docker-compose.yml  install_dev_tools.sh  manage.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  setup.cfg
apps/ai_core/: RealTimeMonitoringHandler.py  apps.py  real_time_monitoring_handler.py
apps/ai_core/adapters/: llm_factory.py  monitoring.py
apps/ai_core/examples/: __init__.py  usage_examples.py
apps/ai_core/migrations/: 0001_initial.py
apps/ai_core/models/: __init__.py  ai_config.py  logs.py
apps/ai_core/services/: usage_service.py  workflow_service.py
apps/ai_core/tools/: __init__.py  candidate_tools.py  email_tools.py  linkedin_tools.py  registry.py
apps/ai_core/workflows/: sourcing_graph.py
apps/recruitment/: apps.py  urls.py
apps/recruitment/management/commands/: verify_vacancy_flow.py
apps/recruitment/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_jobvacancy_interview_mode_and_more.py  0005_vacancysocialpost.py
apps/recruitment/models/: __init__.py  application.py  candidate.py  choices.py  job_vacancy.py  social_post.py
apps/recruitment/repositories/: __init__.py  application_repository.py  candidate_repository.py  job_vacancy_repository.py
apps/recruitment/serializers/: __init__.py  application_create_serializer.py  application_serializer.py  candidate_serializer.py  job_vacancy_create_serializer.py  job_vacancy_serializer.py  vacancy_social_post_serializer.py
apps/recruitment/services/: __init__.py  application_service.py  job_vacancy_service.py
apps/recruitment/views/: __init__.py  application_views.py  job_vacancy_views.py
apps/tenants/: admin.py  permissions.py  permissions_registry.py  urls.py
apps/tenants/middleware/: __init__.py  tenant_middleware.py
apps/tenants/migrations/: 0001_initial.py  0002_initial.py  0003_alter_tenantaiconfig_provider.py  0004_tenant_logo_tenant_primary_color_and_more.py  0005_alter_tenantaiconfig_provider.py  0006_tenantmembership_permissions.py
apps/tenants/models/: __init__.py  choices.py  tenant_ai_config.py  tenant_membership.py  tenant_model.py
apps/tenants/repositories/: __init__.py  tenant_membership_repository.py  tenant_repository.py
apps/tenants/serializers/: __init__.py  add_member_serializer.py  tenant_ai_config_serializer.py  tenant_create_serializer.py  tenant_membership_serializer.py  tenant_serializer.py  tenant_update_serializer.py  update_role_serializer.py
apps/tenants/services/: __init__.py  tenant_ai_config_service.py  tenant_membership_service.py  tenant_service.py
apps/tenants/views/: __init__.py  ai_config_views.py  permission_views.py  tenant_views.py
apps/users/: apps.py  urls.py
apps/users/migrations/: 0001_initial.py
apps/users/models/: user.py
apps/users/repositories/: __init__.py  user_repository.py
apps/users/serializers/: __init__.py  change_password_serializer.py  invite_user_serializer.py  register_tenant_owner_serializer.py  token_serializers.py  update_email_serializer.py  user_create_serializer.py  user_serializer.py  user_update_serializer.py
apps/users/services/: __init__.py  user_service.py
apps/users/views/: __init__.py  auth_views.py  token_views.py  user_views.py
core/: asgi.py  urls.py  wsgi.py
core/settings/: base.py  dev.py  prod.py  test.py
docs/: GUIA_PRUEBAS_Y_VALIDACION.md  HR_Solution_API.postman_collection.json  PROGRESS.md  REFACTORING_MODULARITY.md  SYSTEM_FLOW_AND_TESTING.md  TODO.md  USERS_AND_TENANTS.md  ai_core_architecture.md  ai_core_conversation_gemini.md  ai_core_tools_guide.md  ai_core_tools_summary.md  flujo_peticiones_ia.md  hr_solution_postman_collection.json  rules_develop_agentic.md  technical_specifications.md  technical_specifications_sas.md
